--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,1 +1,27 @@
 
+.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+ion-icon{
+    font-size: 4em;
+    color: aliceblue;
+}
+
+
+ ion-card {
+    position: bottom;
+    text-align: center;
+  }
+
+.card-title {
+    font-family: Lato-Semibold;
+    position: bottom;
+    top: 36%;
+    font-size: 15px;
+    width: 100%;
+    font-weight: normal;
+    color: #fff;
+  }
